media/deluge/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
spec:
  serviceName: deluge
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      volumes:
      - name: deluge
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:deluge
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: downloads
        persistentVolumeClaim:
          claimName: deluge
      - name: deluge-secrets
        secret:
          secretName: deluge
      containers:
      - name: deluge
        image: linuxserver/deluge:2.0.3-2201906121747ubuntu18.04.1-ls50
        volumeMounts:
        - name: deluge
          subPath: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads/deluge
        - name: deluge-secrets
          subPath: auth
          mountPath: /config/auth
          readOnly: true
        ports:
        - containerPort: 8112
          name: deluge-webui
        - containerPort: 19058
          name: deluge-daemon
        - containerPort: 22722
          name: deluge-bt
        readinessProbe:
          tcpSocket:
            port: deluge-bt
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: deluge-bt
          initialDelaySeconds: 15
          periodSeconds: 20
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #     - weight: 100
      #       podAffinityTerm:
      #         labelSelector:
      #           matchExpressions:
      #           - key: app
      #             operator: In
      #             values:
      #             - pms
      #         topologyKey: kubernetes.io/hostname
