media/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  type: ClusterIP
  clusterIP: 10.102.115.35
  selector:
    app: deluge
  ports:
  - name: deluge
    port: 8112
    targetPort: 8112
  - name: deluge-daemon
    port: 19058
    targetPort: 19058
  - name: deluge-bt
    port: 22722
    targetPort: 22722
