media/deluge/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deluge-ui
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: deluge
  ingress:
  - ports:
    - port: 8112
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deluge-bt
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: deluge
  ingress:
  - ports:
    - port: 22722
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
